--- a/practice7/index.html
+++ b/practice7/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <div id="fd"></div>
-    <div id="minmax"></div>
+    <div id="main"></div>
 </body>
 </html>
