--- a/CompletePage/index.html
+++ b/CompletePage/index.html
@@ -9,14 +9,27 @@
 <body>
     <div id="mainbod">
     <div class="elem" id="elemn1"><h1>The Logo</h1></div>
-    <div class="elem" id="elemn2"></div>
-    <div class="elem" id="elemn3">
-        <div id="vid">
-            <video src="CompletePage/pexels-valeriia-miller-6040389 (1080p).mp4"</video>
-        </div>
+    <div class="elem" id="elemn2">
+        <h4 id="h4E2">Menu</h4>
+        <h5>Home Page</h5>
+        <h5>Portfolio</h5>
+        <h5>Fashion week - @2021</h5>
+        <h5>News / Articles</h5>
+        <h5>Contact</h5>
     </div>
-    <div class="elem" id="elemn4"></div>
-    <div class="elem" id="elemn5"></div>
+    <div class="elem" id="elemn3">
+<video autoplay loop muted src="./pexels-valeriia-miller-6040389 (1080p).mp4"></video>
+    </div>
+    <div class="elem" id="elemn4">
+        <h1>SELECT</h1>
+        <h1>FASHION</h1>
+        <h1>MOD. 05</h1>
+        <h1>SCENE</h1>
+    </div>
+    <div class="elem" id="elemn5">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Praesentium neque fuga illo necessitatibus volupta <br>tem unde, dolore sed earum placeat consequuntur?</p>
+    </div>
+    <div id="gola"><h2>-></h2></div>
 </div>
 </body>
 </html>
