--- a/CompletePage/index.html
+++ b/CompletePage/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="mainbod">
-    <div class="elem" id="elemn1"><h1>The Logo</h1></div>
-    <div class="elem" id="elemn2">
+        <div class="elem" id="elemn1"><h1>The Logo</h1></div>
+        <div class="elem" id="elemn2">
+            <div id="obj">
         <h4 id="h4E2">Menu</h4>
         <h5>Home Page</h5>
         <h5>Portfolio</h5>
@@ -17,8 +22,9 @@
         <h5>News / Articles</h5>
         <h5>Contact</h5>
     </div>
+    </div>
     <div class="elem" id="elemn3">
-<video autoplay loop muted src="./pexels-valeriia-miller-6040389 (1080p).mp4"></video>
+        <video autoplay loop muted src="./pexels-valeriia-miller-6040389 (1080p).mp4"></video>
     </div>
     <div class="elem" id="elemn4">
         <h1>SELECT</h1>
@@ -29,7 +35,12 @@
     <div class="elem" id="elemn5">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Praesentium neque fuga illo necessitatibus volupta <br>tem unde, dolore sed earum placeat consequuntur?</p>
     </div>
-    <div id="gola"><h2>-></h2></div>
+    <div id="koala">
+        <h1>Koala Koala Koala Koala Koala Koala Koala Koala </h1>
+    </div>
+    <div id="gola" >
+        <i class="ri-arrow-right-line"></i>
+    </div>
 </div>
 </body>
 </html>
