--- a/CompletePage/index.html
+++ b/CompletePage/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div id="mainbod">
-        <div class="elem" id="elemn1"><h1>The Logo</h1></div>
+        <div class="elem" id="elemn1"><h1>The Koala</h1></div>
         <div class="elem" id="elemn2">
             <div id="obj">
         <h4 id="h4E2">Menu</h4>
         <h5>Home Page</h5>
-        <h5>Portfolio</h5>
-        <h5>Fashion week - @2021</h5>
+        <h5>Health Care</h5>
+        <h5>Govt laws - @2024</h5>
         <h5>News / Articles</h5>
         <h5>Contact</h5>
     </div>
@@ -27,13 +27,13 @@
         <video autoplay loop muted src="./pexels-valeriia-miller-6040389 (1080p).mp4"></video>
     </div>
     <div class="elem" id="elemn4">
-        <h1>SELECT</h1>
-        <h1>FASHION</h1>
-        <h1>MOD. 05</h1>
-        <h1>SCENE</h1>
+        <h1>ANIMALS</h1>
+        <h1>WELLFARE,</h1>
+        <h1>HEALTH-CARE</h1>
+        <h1>CENTERS</h1>
     </div>
     <div class="elem" id="elemn5">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Praesentium neque fuga illo necessitatibus volupta <br>tem unde, dolore sed earum placeat consequuntur?</p>
+        <p>Empowering pet owners with comprehensive animal healthcare solutions, our dedicated team ensures the holistic well-being of your beloved companions through compassionate treatment, advanced medical expertise, and personalized care tailored to their unique needs.</p>
     </div>
     <div id="koala">
         <h1>Koala Koala Koala Koala Koala Koala Koala Koala </h1>
